--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,8 +18,8 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_DATABASE: ev_charging_system
-      MYSQL_ROOT_USER: root
-      MYSQL_ROOT_PASSWORD: alin
+      MYSQL_ROOT_USER:
+      MYSQL_ROOT_PASSWORD:
     volumes:
       - ./storage/dbdata:/var/lib/mysql
     ports:
