--- a/.env.testing
+++ b/.env.testing
@@ -4,5 +4,5 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 #FORWARD_DB_PORT=3307
 DB_DATABASE=ev_charging_system_testing
-DB_USERNAME=root
-DB_PASSWORD=alin
+DB_USERNAME=
+DB_PASSWORD=
