removed sensitive data

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     environment:
       MYSQL_DATABASE: ev_charging_system
       MYSQL_ROOT_USER: root
-      MYSQL_ROOT_PASSWORD: 12345
+      MYSQL_ROOT_PASSWORD:
     volumes:
       - ./storage/dbdata:/var/lib/mysql
     ports:
